--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
       <div class="dice"><img src="/images/icon-dice.svg" /></div>
     </main>
     <footer class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
-        Frontend Mentor
-      </a>
-      . Coded by
-      <a href="#">Your Name Here</a>
-      .
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+          Frontend Mentor
+        </a>
+        . Coded by
+        <a href="https://github.com/WebDevCampos">Marcus Rangel</a>
+        .
+      </p>
     </footer>
     <script src="/scripts/index.js"></script>
   </body>
