--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
       <!-- Advice ID goes here -->
 
       <blockquote class="advice__text"></blockquote>
+<picture>
+<source media="(max-width:500px)" srcset="pattern-divider-mobile.svg">
 
       <img src="/images/pattern-divider-desktop.svg" />
-      <div class="dice"><img src="/images/icon-dice.svg" /></div>
+     </picture>
+ <div class="dice"><img src="/images/icon-dice.svg" /></div>
     </main>
     <footer class="attribution">
       <p>
