--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <blockquote class="advice__text"></blockquote>
 <picture>
-<source media="(max-width:500px)" srcset="pattern-divider-mobile.svg">
+<source media="(max-width:500px)" srcset="/images/pattern-divider-mobile.svg">
 
       <img src="/images/pattern-divider-desktop.svg" />
      </picture>
