Added rotate animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/favicon.ico"
     />
     <link rel="stylesheet" href="/styles/index.css" />
     <title>Frontend Mentor | Advice generator app</title>
@@ -24,12 +24,15 @@
       <!-- Advice ID goes here -->
 
       <blockquote class="advice__text"></blockquote>
-<picture>
-<source media="(max-width:500px)" srcset="/images/pattern-divider-mobile.svg">
+      <picture>
+        <source
+          media="(max-width:500px)"
+          srcset="/images/pattern-divider-mobile.svg"
+        />
 
-      <img src="/images/pattern-divider-desktop.svg" />
-     </picture>
- <div class="dice"><img src="/images/icon-dice.svg" /></div>
+        <img src="/images/pattern-divider-desktop.svg" />
+      </picture>
+      <div class="dice"><img src="/images/icon-dice.svg" /></div>
     </main>
     <footer class="attribution">
       <p>
