Added rotate animation

--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
           srcset="/images/pattern-divider-mobile.svg"
         />
 
-        <img src="/images/pattern-divider-desktop.svg" />
+        <img
+          src="/images/pattern-divider-desktop.svg"
+          alt=""
+          aria-hidden="true"
+        />
       </picture>
-      <div class="dice"><img src="/images/icon-dice.svg" /></div>
+      <div class="dice">
+        <img src="/images/icon-dice.svg" alt="Rolling dice advice generator" />
+      </div>
     </main>
     <footer class="attribution">
       <p>
